--- a/Views/css/estilos.css
+++ b/Views/css/estilos.css
@@ -5,11 +5,11 @@ html, body {
 }
 body {
      font-family: 'Montserrat', sans-serif;
-     background: url(../img/bg.png) no-repeat center center fixed;
+     background: url(../img/fondo.jpg) no-repeat center center fixed;
      -webkit-background-size: cover;
-        -moz-background-size: cover;
-          -o-background-size: cover;
-             background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
 }
 
 .height-100 {
