--- a/Views/css/estilos.css
+++ b/Views/css/estilos.css
@@ -27,3 +27,10 @@ body {
      width: 500px;
      border: 2px solid rgba(0, 0, 0, 0.2);
 }
+
+.divButtom {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding-top: 13px;
+}
